# rftg

./: readme.md  specifications.md  tasks.md
python_rftg/: .gitignore  README.md  dev.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
python_rftg/docs/: alternate_card_data_approaches.md
python_rftg/src/: __init__.py
python_rftg/src/core/: __init__.py  constants.py  engine.py  game_state.py
python_rftg/tests/: test_core.py
